--- a/WK2 Assignment/page2.html
+++ b/WK2 Assignment/page2.html
@@ -28,7 +28,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="./index.html" target="_blank">Text & Pics</a></li>
+                <li><a href="./page1.html" target="_blank">Text & Pics</a></li>
                 <li><a href="./page2.html" target="_blank">Pics Only</a></li>
                 <li><a href="./page3.html" target="_blank">Bad Cat</a></li>
             </ul>
