--- a/wk3/index.html
+++ b/wk3/index.html
@@ -14,9 +14,9 @@
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="https://yantingzhou.github.io/CT2/wk1/">Texts</a></li>
+                <li><a href="https://yantingzhou.github.io/CT2/wk2/page3.html">Bad Cat</a></li>
+                <li><a href="https://yantingzhou.github.io/">About</a></li>
             </ul>
         </nav>
     </header>
