--- a/dataCollection/index.html
+++ b/dataCollection/index.html
@@ -191,10 +191,10 @@
         }
     </script>
     </main>
-        <section>
+        <!-- <section>
             <h1>MY HUMIDITY</h1>
             <h2>Project Documentation</h2>
-        </section>
+        </section> -->
 
 
 </body>
