--- a/dataCollection/index.html
+++ b/dataCollection/index.html
@@ -58,6 +58,7 @@
 
         function setup(){
             createCanvas(windowWidth,windowHeight)
+            frameRate(5)
             // slider = createSlider(1, 500, 1, 10)
             // slider.position(20, 80)
             // slider.changed(fetchData)
