--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             <li><a href="https://yantingzhou.github.io/CT2/wk2/">Week2</a></li>
             <li><a href="https://yantingzhou.github.io/CT2/wk3/">Week3</a></li>
             <li><a href="https://yantingzhou.github.io/CT2/wk4/">Week4</a></li>
+            <li><a href="https://hubs.mozilla.com/Ufzu2e6/ethical-hungry-sphere">Week6</a></li>
+            <li><a href="https://yantingzhou.github.io/CT2/dataCollection/">Week10</a></li>
+
          </ul>
         </nav>
     </main>
