--- a/index.html
+++ b/index.html
@@ -8,17 +8,21 @@
 </head>
 <body>
     <header>
-        <h1>Flora Zhou CT2 Homework</h1>
+        <h1>Flora Zhou Creative Technology Homework</h1>
     </header>
     <main>
+        <h2>CT2</h2>
         <nav>
             <ul>
-            <li><a href="https://yantingzhou.github.io/CT2/wk1/">Week1</a></li>
-            <li><a href="https://yantingzhou.github.io/CT2/wk2/">Week2</a></li>
-            <li><a href="https://yantingzhou.github.io/CT2/wk3/">Week3</a></li>
-            <li><a href="https://yantingzhou.github.io/CT2/wk4/">Week4</a></li>
+            <li><a href="https://yantingzhou.github.io/CreativeTechnology/2/wk1/">Week1</a></li>
+            <li><a href="https://yantingzhou.github.io/CreativeTechnology/2/wk2/">Week2</a></li>
+            <li><a href="https://yantingzhou.github.io/CreativeTechnology/2/wk3/">Week3</a></li>
+            <li><a href="https://yantingzhou.github.io/CreativeTechnology/2/wk4/">Week4</a></li>
             <li><a href="https://hubs.mozilla.com/Ufzu2e6/ethical-hungry-sphere">Week6</a></li>
-            <li><a href="https://yantingzhou.github.io/CT2/dataCollection/">Week10</a></li>
+            <li><a href="https://yantingzhou.github.io/CreativeTechnology/dataCollection/">Week10</a></li>
+
+        <h2>CT4</h2>
+            <li><a href="https://yantingzhou.github.io/CreativeTechnology/2/wk1/">Week1</a></li>
 
          </ul>
         </nav>
