--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         <h2>CT2</h2>
         <nav>
             <ul>
-            <li><a href="https://yantingzhou.github.io/CreativeTechnology/2/wk1/">Week1</a></li>
-            <li><a href="https://yantingzhou.github.io/CreativeTechnology/2/wk2/">Week2</a></li>
-            <li><a href="https://yantingzhou.github.io/CreativeTechnology/2/wk3/">Week3</a></li>
-            <li><a href="https://yantingzhou.github.io/CreativeTechnology/2/wk4/">Week4</a></li>
+            <li><a href="2/wk1/index.html">Week1</a></li>
+            <li><a href="2/wk2/index.html">Week2</a></li>
+            <li><a href="2/wk3/index.html">Week3</a></li>
+            <li><a href="wk4/index.html">Week4</a></li>
             <li><a href="https://hubs.mozilla.com/Ufzu2e6/ethical-hungry-sphere">Week6</a></li>
-            <li><a href="https://yantingzhou.github.io/CreativeTechnology/dataCollection/">Week10</a></li>
+            <li><a href="dataCollection/index.html">Week10</a></li>
 
         <h2>CT4</h2>
-            <li><a href="https://yantingzhou.github.io/CreativeTechnology/2/wk1/">Week1</a></li>
+            <li><a href="4/wk2/index.html">Week1</a></li>
 
          </ul>
         </nav>
