--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
         <h2>CT4</h2>
             <li><a href="4/wk2/index.html">Week1</a></li>
+            <li><a href="4/Chatbots with Simple AI - week 1.html">Chatbots with Simple AI - week 1</a></li>
 
          </ul>
         </nav>
