--- a/4/chatbot/Chatbots with Simple AI - week 3.html
+++ b/4/chatbot/Chatbots with Simple AI - week 3.html
@@ -17,5 +17,12 @@
         <p>At the beginning, I want to figure out how to add emoji response as the bots in other servers do. Google told me that I can use response.add_reaction() function. For the emoji, I tried both unicode and unicode name, and chose latter. So I have 3 emoji reaction await players to respond.</p>
         <img src="google1.png" alt="google1" width="400">
         <img src="1.png" alt="1" width="400">
-</body>
+        <p>Then, I looked at the example of animal game bot, trying to incorporate the buttons and binary tree for yes or no questions. I modified the trees, asking annoying questions as a bad cat. The questions are related to kittys daily life.</p>
+        <img src="process 1.png" alt="process 1">
+        <img src="2.png" alt="2" width="400">
+        <p>The binary tree questions only happens when player respond with the first emoji. When player react with the second emoji, there will be a chance talk to the bot, and the bot will respond with a line in the movie from semantic similarity bot example.</p>
+        <p>At this point I encountered a problem. I found the semantic response was always same, which is less fun. I checked the code, and tried to adjust the line the bot will be picking</p>
+        <img src="process 2.png" alt="process 2">
+        <img src="process 3.png" alt="process 3" width="400">
+    </body>
 </html>
