--- a/4/chatbot/Chatbots with Simple AI - week 3.html
+++ b/4/chatbot/Chatbots with Simple AI - week 3.html
@@ -7,7 +7,7 @@
     <title>BadCat Bot Documentation</title>
 </head>
 <body>
-    <img src="headphoto.png" alt="headphoto" width="300">
+    <iframe width="916" height="586" src="https://www.youtube.com/embed/hmvYnDRKQKY" title="BadCat Bot" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <h1>BadCat Bot</h1>
     <h2>Project Brief</h2>
         <p>This Discord bot is going to be an annoying and funny cat that asks yes or no questions and acts differently depending on the response. I think it will be a fun way to make decisions and pass the time.</p>
@@ -21,8 +21,9 @@
         <img src="process 1.png" alt="process 1">
         <img src="2.png" alt="2" width="400">
         <p>The binary tree questions only happens when player respond with the first emoji. When player react with the second emoji, there will be a chance talk to the bot, and the bot will respond with a line in the movie from semantic similarity bot example.</p>
-        <p>At this point I encountered a problem. I found the semantic response was always same, which is less fun. I checked the code, and tried to adjust the line the bot will be picking</p>
+        <p>At this point I encountered a problem. I found the semantic response was always same, which is less fun. I checked the code, and tried to adjust the line the bot will be picking.</p>
         <img src="process 2.png" alt="process 2">
         <img src="process 3.png" alt="process 3" width="400">
+        <p>After adjusting the number, I sucessfully get the line which was player's response. Till this moment I roughly got the desirable outcome. After some polishing, the BadCat Bot came to life!</p>
     </body>
 </html>
